Implemented env variable with dotenv

--- a/views/search.html
+++ b/views/search.html
@@ -5,18 +5,19 @@
   <img src="http://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
 
   <form action="/" method="POST">
+      <label>Enter a Zipcode</label>
       <input type="text"
 
       onfocus="
-      if(this.placeholder == 'City & State or Zipcode') {
+      if(this.placeholder == 'Zipcode') {
           this.placeholder = '';
       }"
 
       onblur="
-          this.placeholder = 'City & State or Zipcode';
+          this.placeholder = 'Zipcode';
       "
 
-      placeholder="City & State or Zipcode" id="username" name="username">
+      placeholder="Zipcode" id="username" name="username">
       <input type="submit" value="search" class="button">
   </form>
 
