--- a/views/header.html
+++ b/views/header.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple Weather App</title>
     <style type="text/css" media="screen">
-        @import url(http://fonts.googleapis.com/css?family=Varela+Round);
-        @import url(http://necolas.github.io/normalize.css/3.0.2/normalize.css);
+        @import url(https://fonts.googleapis.com/css?family=Varela+Round);
+        @import url(https://necolas.github.io/normalize.css/3.0.2/normalize.css);
 
         /* I couldn't get the CSS file to link to the HTML ¯\_(ツ)_/¯ */
 
