--- a/views/search.html
+++ b/views/search.html
@@ -2,7 +2,7 @@
 
   <h3>Simple Weather App</h1>
 
-  <img src="http://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
+  <img src="https://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
 
   <form action="/" method="POST">
       <label>Enter a Zipcode</label>
